# hackaton

./: .dockerignore  .gitignore  Dockerfile  deploy-bundle.tgz  docker-compose.yml  langgraph.json  package-lock.json  package.json  pyproject.toml
agents/generate_agent/: __init__.py  component_naming.py  main.py  page_plan_context.py  path_case.py  state.py  utils.py
agents/progressusbot_api/: __init__.py  app.py  langgraph_runner.py  state_serialize.py
agents/rag_graph/: main.py  (+3 more)
deploy/: deploy-server.ps1  lipovy_generate_request.json  nginx-api.progressusbot.ru.conf  nginx-progressusbot.example.conf  progressusbot.env.example  sample_generate_request.json
json/: input_bundle.v1.min.json  json_example.json  langgraph_dota2_merch_input.json  langgraph_rag_input.json  langgraph_studio_generate_agent.json  langgraph_studio_generate_agent_bundle_progress_vision.json  langgraph_studio_generate_agent_reference_mailru.json  langgraph_studio_generate_agent_reference_mailru_filled.json  langgraph_studio_generate_agent_user_design_only.json  langgraph_studio_unified.json  langgraph_studio_validate_agent_site_guideline_bundle.json  langgraph_tutor_input.json  langgraph_unified_flower_shop_input.json  langgraph_unified_tutor_input.json  langgraph_validate_automatoria_input.json  langgraph_validate_dota2_merch_input.json  langgraph_validate_flower_shop_input.json  langgraph_validate_site1_file_input.json  langgraph_validate_site1_input.json  langgraph_validate_site_broken_input.json  main.json  result.json  site_guideline_bundle.json  tutor_segment_test.json
scripts/: call_generate_api.py  langgraph_sdk_smoke.py
site/: astro.config.mjs
ssh/: generator  generator.pub
(+146 files in other folders)
