[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatorio-agent"
version = "0.1.0"
description = "Automatorio Agent for website architecture generation"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "requests",
    "python-dotenv",
    "langchain-mcp-adapters",
    "langchain-core",
    "langchain-openai",
    "playwright",
    "tree-sitter",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langgraph-sdk>=0.1.48",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
